# TeamFlow-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0453943d94c3_added_refresh_token_table.py  32e01c660e78_backfill_usernames.py  8f15255e8711_add_username_column_to_users.py  ba627698b030_make_username_not_null_unique.py  ce5bf4d33334_added_team_membership_and_tasks_tables.py  d83615238f8d_initial_migration.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth_routes.py  superuser.py  task.py  team.py  team_member.py
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: base.py  base_models.py  task.py  team.py  team_member.py  token.py  token_models.py  user.py  user_models.py
app/repositories/: task.py  team.py  team_member.py  token.py  token_repository.py  user.py  user_repository.py
app/schemas/: auth_schemas.py  task.py  team.py  team_member.py
app/services/: auth_service.py  superuser.py  task.py  team.py  team_member.py
docs/: README.md
