[project]
name = "teamflow-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
